add receive message. when connecting, disable connectbutton

--- a/TCP/clientwidget.ui
+++ b/TCP/clientwidget.ui
@@ -14,39 +14,11 @@
    <string>ClientWidget</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>  IP</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="lineEditIP"/>
    </item>
-   <item row="0" column="2">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Port</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="3">
     <widget class="QLineEdit" name="lineEditPort"/>
-   </item>
-   <item row="1" column="1">
-    <widget class="QPushButton" name="pushButtonClose">
-     <property name="text">
-      <string>Close</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <widget class="QPushButton" name="pushButtonConnect">
-     <property name="text">
-      <string>Connect</string>
-     </property>
-    </widget>
    </item>
    <item row="2" column="1">
     <widget class="QPushButton" name="pushButtonOpen">
@@ -61,6 +33,37 @@
       <string>CloseDoor</string>
      </property>
     </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="pushButtonClose">
+     <property name="text">
+      <string>Close</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>  IP</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QPushButton" name="pushButtonConnect">
+     <property name="text">
+      <string>Connect</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Port</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1" colspan="3">
+    <widget class="QTextEdit" name="textEdit"/>
    </item>
   </layout>
  </widget>
