update UI of our client

--- a/TCP/clientwidget.ui
+++ b/TCP/clientwidget.ui
@@ -14,18 +14,8 @@
    <string>ClientWidget</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="lineEditIP"/>
-   </item>
    <item row="0" column="3">
     <widget class="QLineEdit" name="lineEditPort"/>
-   </item>
-   <item row="2" column="1">
-    <widget class="QPushButton" name="pushButtonOpen">
-     <property name="text">
-      <string>OpenDoor</string>
-     </property>
-    </widget>
    </item>
    <item row="2" column="3">
     <widget class="QPushButton" name="pushButtonCloseDoor">
@@ -34,10 +24,20 @@
      </property>
     </widget>
    </item>
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="lineEditIP"/>
+   </item>
    <item row="1" column="1">
     <widget class="QPushButton" name="pushButtonClose">
      <property name="text">
       <string>Close</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QPushButton" name="pushButtonOpen">
+     <property name="text">
+      <string>OpenDoor</string>
      </property>
     </widget>
    </item>
@@ -48,13 +48,6 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="3">
-    <widget class="QPushButton" name="pushButtonConnect">
-     <property name="text">
-      <string>Connect</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="2">
     <widget class="QLabel" name="label_2">
      <property name="text">
@@ -62,8 +55,22 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="3">
+    <widget class="QPushButton" name="pushButtonConnect">
+     <property name="text">
+      <string>Connect</string>
+     </property>
+    </widget>
+   </item>
    <item row="3" column="1" colspan="3">
     <widget class="QTextEdit" name="textEdit"/>
+   </item>
+   <item row="4" column="1" colspan="3">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Real Time Embedded Program                                                              Team 11 TCP Client</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
